# aro_semestralka

./: .gitignore  README.md
planning/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
planning/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
planning/devel/.private/dummy_grid/: .catkin  .rosinstall  setup.sh
planning/devel/.private/exploration/: .catkin  .rosinstall  setup.sh
planning/devel/include/dummy_grid/: DrawGrid.h  DrawGridRequest.h  DrawGridResponse.h  ValuePoint.h
planning/devel/include/exploration/: AnyFrontiersLeft.h  AnyFrontiersLeftRequest.h  AnyFrontiersLeftResponse.h  GenerateFrontier.h  GenerateFrontierRequest.h  GenerateFrontierResponse.h  PlanPath.h  PlanPathRequest.h  PlanPathResponse.h
planning/src/dummy_grid/: CMakeLists.txt
planning/src/exploration/: CMakeLists.txt
robot_coordination/include/robot/: robot.h  waypoint.h
robot_coordination/scripts/: path_following_simple.py
robot_coordination/src/: node.cpp  robot.cpp
src/aro_slam/: CMakeLists.txt  package.xml  test.py
src/aro_slam/launch/: bag.launch  icp_slam_2d.launch  live.launch  turtle.rviz  viz.launch
src/aro_slam/scripts/: icp_slam_2d
src/aro_slam/src/aro_slam/: __init__.py  icp.py  utils.py
src/barbie_detection/: CMakeLists.txt
src/barbie_detection/launch/: detector.launch
src/barbie_detection/scripts/: barbie_selection.py  detector.py  network.py
src/dummy_grid/data/: grid_0.npy
src/dummy_grid/msg/: ValuePoint.msg
src/dummy_grid/scripts/: compute_front.py  front_plan.py  front_plan_cam.py  grid_visualizer.py  pose_sender.py  test_planning.py
src/exploration/launch/: exploration_planning.launch
src/exploration/scripts/: frontier.py  frontier_cam.py  ocupation_cam.py  planner.py  plotter.py
src/exploration/srv/: PlanPath.srv  dvad.srv  jednad.srv
src/point_cloud_color/: CMakeLists.txt  README.md  package.xml  point_cloud_color_plugins.xml
src/report/: hw7.tex
src/robot_coordination/: CMakeLists.txt  README.md  package.xml
src/robot_coordination/launch/: move.launch
src/robot_coordination/scripts/: path_following_simple.py
src/robot_coordination/src/: robot.cpp
src/robot_coordination/srv/: StartMovement.srv
src/voxel_map/: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  setup.py
src/voxel_map/include/voxel_map/: py_array.h  py_voxel_map.h
src/voxel_map/matlab/: HashMap.m  VoxelMap.m  array.h  hash_map.cpp  mex_voxel_map.m  voxel_map.cpp
src/voxel_map/matlab/test/: point_to_line_dist.m  test_hash_map.m  test_io.m  test_par.m  test_voxel_map.m
src/voxel_map/python/: voxel_map_module.cpp
src/voxel_map/python/test/: test_voxel_map.py
src/voxel_map/src/: voxel_map.cpp
src/voxel_map/test/: install_in_virtualenv  voxel_map_test.cpp
(+133 files in other folders)
